# CMakeList.txt : CMake project for humanfactors, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("humanfactors")

# Add source to this project's executable.
add_executable (humanfactors "humanfactors.cpp" "humanfactors.h")

# TODO: Add tests and install targets if needed.
