# CMakeList.txt : CMake project for DHART_API, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("DHART_API")

# Add source to this project's executable.
add_executable (DHART_API "DHART_API.cpp" "DHART_API.h")

# TODO: Add tests and install targets if needed.
